update JS packer and readme

--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
   "minimum-stability": "stable",
   "require": {
     "leafo/scssphp": "^0.7.4",
-    "vladkens/autoprefixer": "dev-master"
+    "vladkens/autoprefixer": "dev-master",
+    "tholu/php-packer": "^0.2.0"
   }
 }
